OO-3864: group by curriculum the list of lectures for participants